--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,9 @@ spring.datasource.url=jdbc:mysql://localhost/ecommerce?serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
+
+encryption.salt.rounds=10
+
+jwt.algorithm.key=THEODORO
+jwt.issuer=Eduardosrc
+jwt.expiryInSeconds=604800
